src/css/style.css
html, body {
  background-color: black;
  font-family: monospace;
  font-size: 14pt;
  color: white;
  margin: 5px;
	min-width: 600px;
}

div {
	margin-top: 4px;
	margin-bottom: 4px;
}

#container {
	height: 100%;
	width: 100%;
	position: relative;
}

#prompt {
	background: transparent;
	width: 100%;
	float: left;
	display: flex;
	flex-direction: row;
	position: absolute;
	top: 0;

}

.cmdline {
  background-color: transparent;
  margin-left: 5px;
	outline: none;
  border: none;
	width: 100%;
  font: inherit;
  color: inherit;
	overflow: visible;
	word-wrap: normal;

}

